# fastapi-uv

./: .dockerignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  app.py  docker-compose.yaml  pyproject.toml
app/: .app.py.swp  app.py
