[project]
name = "fastapi-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings>=2.10.1",
]

[dependency-groups]
dev = [
    "fastapi[cli,standard]>=0.115.14",
    "pytest>=8.4.1",
]
prod = [
    "fastapi>=0.115.14",
]
